fix readability of anchor tags in home component

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -36,3 +36,7 @@
 .filter-pill-badge:hover {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
+
+.anchor-on-blue {
+    color: #ffd900;
+}
